--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -721,6 +721,22 @@
                                                                 Width="60"/>
                 
                                             <StackPanel Grid.Column="2" Orientation="Horizontal" Margin="5,0,0,0">
+                                                <ToggleButton Command="{Binding TogglePauseQueueCommand}" Margin="0,0,5,0">
+                                                    <ToggleButton.Style>
+                                                        <Style TargetType="ToggleButton" BasedOn="{StaticResource IconToggleButton}">
+                                                            <!-- Default state: Not paused, shows PAUSE icon -->
+                                                            <Setter Property="Content" Value="&#xE769;"/>
+                                                            <Setter Property="ToolTip" Value="{local:Translate Tab_PauseQueue}"/>
+                                                            <Style.Triggers>
+                                                                <!-- When checked: Paused, shows RESUME (Play) icon -->
+                                                                <Trigger Property="IsChecked" Value="True">
+                                                                    <Setter Property="Content" Value="&#xE768;"/>
+                                                                    <Setter Property="ToolTip" Value="{local:Translate Tab_ResumeQueue}"/>
+                                                                </Trigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </ToggleButton.Style>
+                                                </ToggleButton>
                                                 <Button Content="&#xE8BB;" 
                                                         Style="{StaticResource IconButton}"
                                                         Background="{StaticResource ErrorBrush}"
