--- a/Comfizen/Views/SettingsWindow.xaml
+++ b/Comfizen/Views/SettingsWindow.xaml
@@ -234,6 +234,16 @@
                                 <TextBox Text="{Binding SpecialModelValues, Converter={StaticResource StringListConverter}, UpdateSourceTrigger=PropertyChanged}"/>
                             </StackPanel>
                         </GroupBox>
+                        
+                        <GroupBox Header="Slider Defaults">
+                            <StackPanel>
+                                <TextBlock Text="Rules for default slider values, one rule per line." Margin="0,0,0,5" Foreground="{StaticResource TextSecondaryBrush}"/>
+                                <TextBlock Text="Format: [NodeType::]FieldName=Min Max Step [Precision]" Foreground="{StaticResource TextSecondaryBrush}" FontSize="11" Margin="0,0,0,5"/>
+                                <TextBox Text="{Binding SliderDefaults, UpdateSourceTrigger=PropertyChanged}" 
+                                         AcceptsReturn="True" TextWrapping="Wrap" MinHeight="80" 
+                                         VerticalScrollBarVisibility="Auto"/>
+                            </StackPanel>
+                        </GroupBox>
 
                         <GroupBox Header="{local:Translate Settings_Hotkeys}">
                             <Grid Margin="5">
