--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -723,7 +723,7 @@
                                                                 Width="60"/>
                 
                                             <StackPanel Grid.Column="2" Orientation="Horizontal" Margin="5,0,0,0">
-                                                <ToggleButton Command="{Binding TogglePauseQueueCommand}" Margin="0,0,5,0">
+                                                <ToggleButton Command="{Binding TogglePauseQueueCommand}" IsChecked="{Binding IsQueuePaused, Mode=OneWay}" Margin="0,0,5,0">
                                                     <ToggleButton.Style>
                                                         <Style TargetType="ToggleButton" BasedOn="{StaticResource IconToggleButton}">
                                                             <!-- Default state: Not paused, shows PAUSE icon -->
